persistent-volume/deploy-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task-pv
  name: task-pv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-pv
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task-pv
    spec:
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
      containers:
      - name: task-pv-container
        image: nginx
        ports:
          - containerPort: 80
            name: "http-server"
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: task-pv-storage
