persistent-volume/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task-pv
  name: task-pv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-pv
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task-pv
    spec:
      containers:
      - name: task-pv-container
        image: nginx
        ports:
          - containerPort: 80
            name: "http-server"
