persistent-volume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx-pv.YOUR_FQDN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: task-pv-svc
            port:
              number: 80
